name:                todo
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              miyatin
maintainer:          kei@kamasu.jp
-- copyright:
category:            Database
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable todo
  main-is:Main.hs
  ghc-options:         -O2 -threaded
  -- other-modules:
  -- other-extensions:
  build-depends:       base
                     , persistent >= 1.1.4
                     , persistent-mongoDB >= 1.1.5.1
                     , persistent-template >= 1.1.2.1
                     , mongoDB >= 2.0.3
                     , mtl >= 2.2.1
                     , text >= 1.2.0.4
                     , network >= 2.6.0.2
                     , time >= 1.4.2
  hs-source-dirs:      src
  default-language:    Haskell2010
